# project-chimera

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  day1_project_chimera_report.md  pyproject.toml
.cursor/rules/: agent.mdc
.github/workflows/: main.yml
chimera/skills/: __init__.py  _errors.py  _validate.py  evaluate_policy.py  fetch_trends.py  generate_draft.py  publish_content.py
research/: tooling_strategy.md
skills/: README.md
specs/: _meta.md  frontend.md  functional.md  technical.md
tests/: README.md  TEST_COVERAGE_SUMMARY.md  conftest.py  test_behavioral_guarantees.py  test_content_draft.py  test_error_handling.py  test_input_validation.py  test_output_contracts.py  test_skill_interfaces.py  test_trend_fetcher.py
tests/helpers/: validators.py
